# lunar-zebro-object-detection-ros

./: .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  makefile  package.xml
.assets/: al-osi-love.psd  alten-zebro-partners.psd
.github/workflows/: CODEOWNERS  build-and-test.yml  codeql-analysis.yml
docker/: object_detection_ros_focal.Dockerfile  test-object-detection-ros-focal.Dockerfile
msg/: Comm.msg  Diagnostic.msg  Monitor.msg
src/: main.cpp
