<?xml version="1.0"?>
<package format="2">
    <name>object_detection</name>
    <version>1.0.0</version>
    <description>Lunar Zebro object detection components</description>
    <maintainer email="yourizwetsloot@yahoo.com">Youri Zwetsloot</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>opencv2</build_depend>
    <build_depend>zbar</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>opencv2</exec_depend>
    <exec_depend>zbar</exec_depend>
    <export></export>
</package>